# bloom_py_demo

./: .gitignore  README.md  env.example  hello.py  langgraph_flow_corrected.md  pyproject.toml  start.sh  syllabus_sample.json
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
bloom/: database.py  load_syllabus.py  main.py  models.py  tutor_agent.py
bloom/routes/: __init__.py  admin.py  student.py
bloom/templates/: admin.html  base.html  chat.html  homepage.html  syllabus.html
bloom/templates/components/: message.html  progress.html
docs/: socratic_approach.md
specs/001-bloom-tutor-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-bloom-tutor-app/checklists/: requirements.md
specs/001-bloom-tutor-app/contracts/: api.yaml
specs/002-cache-lesson-exposition/: IMPLEMENTATION_SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-cache-lesson-exposition/checklists/: requirements.md
specs/003-exposition-whiteboard-images/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-exposition-whiteboard-images/checklists/: requirements.md
tests/: __init__.py  test_cache_exposition.py
